[metadata]
name = RestCatalyst
author = Kamyar Inanloo
author-email = kamyar1979@gmail.com
summary = Restful API Catalyst
description-file = README.md
description-content-type = text/x-md; charset=UTF-8
home-page = https://github.com/kamyar1979/rest-catalyst
project_urls =
    Bug Tracker = https://github.com/kamyar1979/rest-catalyst/issues
    Documentation = https://github.com/kamyar1979/rest-catalyst/wiki
    Source Code = https://github.com/kamyar1979/rest-catalyst
license = BSD
classifier =
        "Development Status :: 5 - Production/Stable"
        "Intended Audience :: Developers"
        "License :: OSI Approved :: MIT License"
        "Programming Language :: Python"
        "Programming Language :: Python :: 3.7"
        "Programming Language :: Python :: Implementation :: CPython"
        "Programming Language :: Python :: Implementation :: PyPy"
        "Topic :: Database :: Front-Ends"
        "Operating System :: OS Independent"
keywords =
    flask
    odata
    dispatch
    http

python_requires = ">=3.7"

[files]
packages =
    catalyst
